# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.46-r9 (14 Jan 2003): portage restart fix
  15 Jan 2003; Nicholas Jones <carpaski@gentoo.org> emerge: fixed the
  missing tabs from the cvs diff backport.

*portage-2.0.46-r8 (14 Jan 2003): touchup KV{,ERS} for public stable

*portage-2.0.46-r7 (14 Jan 2003): Backport from cvs and fixes.
  portage-2.0.46* :: EXCUDES ALL PORTIONS RELATING SPECIFICALLY TO USERPRIV

  14 Jan 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Persistant
  KV and KVERS on depend calls. Sandbox violation of do_upgrade() caught.

  14 Jan 2003; Nicholas Jones <carpaski@gentoo.org> emerge: --buildpkg
  touchups and forward porting of some of 2.0.46-r6. Restart on -r0/proper
  versions of portage due to VERSION not matching pkgsplit output fixed.

  14 Jan 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: 20% speedup
  in dep generation by removing all external app calls. Moved KVERS to
  portage to make it persistent during dep calls. Other code moved into
  conditionals based on $*!=depend. chmod's swaped with umask.

  11 Jan 2003; Jack Morgan <jmorgan@gentoo.org> cnf/make.conf.sparc:
  updated make.conf.sparc to add CFLAGS for sparc32 and sparc64

  08 Jan 2003; Nicholas Jones <carpaski@gentoo.org> bin/g-cpan.pl:
  Added from bug 3450 -- Creates and merges perl module ebuilds on-the-fly
  from cpan and merges them.

  08 Jan 2003; Mark Guertin <gerk@gentoo.org> cnf/make.conf.ppc:
  updated make.conf.ppc to remove G3 options for CFLAGS and other
  small tweaks

*portage-2.0.47 (06 Jan 2003): UserPriv

  06 Jan 2003; Nicholas Jones <carpaski@gentoo.org> portage.py:
  Forced HOME to BUILD_PREFIX regardless of user. Added in a 'rm -Rf' notice
  to readonly-fs/Full-Disk notices. Disabled the usepkg on buildpkg function
  of portage. digraph.hasallzeros() added -- Determines if tree is zero depth.
	